improving reordering